// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataTable behaves as expected selection -- radio buttons should not have select-all checkbox 1`] = `
<div>
  <section
    class="cds--data-table-container"
  >
    <div
      class="cds--data-table-header"
    >
      <h2
        class="cds--data-table-header__title"
        id="tc-«r7g»-title"
      >
        DataTable with selection
      </h2>
    </div>
    <div
      class="cds--data-table-content"
    >
      <table
        aria-labelledby="tc-«r7g»-title"
        class="cds--data-table cds--data-table--lg"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field A
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field B
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-17__select-row-b"
                  name="select-row-17"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-17__select-row-b"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 2:A
            </td>
            <td>
              Field 2:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-17__select-row-a"
                  name="select-row-17"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-17__select-row-a"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 1:A
            </td>
            <td>
              Field 1:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-17__select-row-c"
                  name="select-row-17"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-17__select-row-c"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 3:A
            </td>
            <td>
              Field 3:B
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`DataTable behaves as expected selection -- radio buttons should render 1`] = `
<div>
  <section
    class="cds--data-table-container"
  >
    <div
      class="cds--data-table-header"
    >
      <h2
        class="cds--data-table-header__title"
        id="tc-«r77»-title"
      >
        DataTable with selection
      </h2>
    </div>
    <div
      class="cds--data-table-content"
    >
      <table
        aria-labelledby="tc-«r77»-title"
        class="cds--data-table cds--data-table--lg"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field A
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field B
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-16__select-row-b"
                  name="select-row-16"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-16__select-row-b"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 2:A
            </td>
            <td>
              Field 2:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-16__select-row-a"
                  name="select-row-16"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-16__select-row-a"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 1:A
            </td>
            <td>
              Field 1:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox cds--table-column-radio"
            >
              <div
                class="cds--radio-button-wrapper"
              >
                <input
                  class="cds--radio-button"
                  id="data-table-16__select-row-c"
                  name="select-row-16"
                  type="radio"
                  value=""
                />
                <label
                  class="cds--radio-button__label"
                  for="data-table-16__select-row-c"
                >
                  <span
                    class="cds--radio-button__appearance"
                  />
                  <span
                    class="cds--radio-button__label-text cds--visually-hidden"
                    dir="auto"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 3:A
            </td>
            <td>
              Field 3:B
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`DataTable behaves as expected selection should render and match snapshot 1`] = `
<div>
  <section
    class="cds--data-table-container"
  >
    <div
      class="cds--data-table-header"
    >
      <h2
        class="cds--data-table-header__title"
        id="tc-«r2k»-title"
      >
        DataTable with selection
      </h2>
    </div>
    <section
      aria-label="data table toolbar"
      class="cds--table-toolbar"
    >
      <div
        aria-hidden="true"
        class="cds--batch-actions"
      >
        <div
          class="cds--batch-summary"
        >
          <p
            class="cds--batch-summary__para"
          >
            <span
              dir="auto"
            >
              0 items selected
            </span>
          </p>
          <span
            class="cds--batch-summary__divider"
          >
            |
          </span>
          <button
            class="cds--btn cds--btn--primary"
            tabindex="-1"
            type="button"
          >
            Select all (3)
          </button>
        </div>
        <div
          class="cds--action-list"
        >
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2A14.173 14.173 0 0 0 2 16a14.173 14.173 0 0 0 14 14 14.173 14.173 0 0 0 14-14A14.173 14.173 0 0 0 16 2m8 15h-7v7h-2v-7H8v-2h7V8h2v7h7Z"
              />
              <path
                d="M24 17h-7v7h-2v-7H8v-2h7V8h2v7h7z"
                fill-opacity="0"
                id="inner-path"
              />
              <path
                d="M0 0h32v32H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2A14.173 14.173 0 0 0 2 16a14.173 14.173 0 0 0 14 14 14.173 14.173 0 0 0 14-14A14.173 14.173 0 0 0 16 2m8 15h-7v7h-2v-7H8v-2h7V8h2v7h7Z"
              />
              <path
                d="M24 17h-7v7h-2v-7H8v-2h7V8h2v7h7z"
                fill-opacity="0"
                id="inner-path"
              />
              <path
                d="M0 0h32v32H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2A14.173 14.173 0 0 0 2 16a14.173 14.173 0 0 0 14 14 14.173 14.173 0 0 0 14-14A14.173 14.173 0 0 0 16 2m8 15h-7v7h-2v-7H8v-2h7V8h2v7h7Z"
              />
              <path
                d="M24 17h-7v7h-2v-7H8v-2h7V8h2v7h7z"
                fill-opacity="0"
                id="inner-path"
              />
              <path
                d="M0 0h32v32H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--batch-summary__cancel cds--btn cds--btn--primary"
            tabindex="-1"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        class="cds--toolbar-content"
      >
        <div
          aria-label="Filter table"
          class="cds--search cds--search--lg cds--toolbar-search-container-persistent"
          role="search"
        >
          <div
            class="cds--search-magnifier"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="cds--search-magnifier-icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 14.3 10.7 10c1.9-2.3 1.6-5.8-.7-7.7S4.2.7 2.3 3 .7 8.8 3 10.7c2 1.7 5 1.7 7 0l4.3 4.3zM2 6.5C2 4 4 2 6.5 2S11 4 11 6.5 9 11 6.5 11 2 9 2 6.5"
              />
              <path
                d="M0 0h16v16H0z"
                fill="none"
              />
            </svg>
          </div>
          <label
            class="cds--label"
            for="custom-id"
            id="custom-id-search"
          >
            Filter table
          </label>
          <input
            autocomplete="off"
            class="cds--search-input"
            id="custom-id"
            placeholder="Filter table"
            role="searchbox"
            tabindex="0"
            type="text"
            value=""
          />
          <button
            aria-label="Clear search input"
            class="cds--search-close cds--search-close--hidden"
            title="Clear search input"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.414 16 24 9.414 22.586 8 16 14.586 9.414 8 8 9.414 14.586 16 8 22.586 9.414 24 16 17.414 22.586 24 24 22.586z"
              />
              <path
                d="M0 0h32v32H0z"
                fill="none"
              />
            </svg>
          </button>
        </div>
        <span
          class="cds--overflow-menu__wrapper"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-labelledby="tooltip-«r2t»"
                class="cds--toolbar-action cds--overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                title="Settings"
                type="button"
              >
                <svg
                  aria-label="Settings"
                  class="cds--overflow-menu__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5 8.4v-.8l1-.8c.4-.3.4-.9.2-1.3l-1.2-2c-.2-.3-.5-.5-.9-.5-.1 0-.2 0-.3.1l-1.2.4c-.2-.1-.4-.3-.7-.4l-.3-1.3c0-.5-.4-.8-.9-.8H6.8c-.5 0-.9.3-1 .8l-.2 1.3c-.3.1-.5.2-.7.3L3.7 3h-.3c-.4 0-.7.2-.9.5l-1.2 2c-.2.4-.1.9.3 1.3l.9.9v.8l-.9.7c-.4.3-.5.9-.2 1.3l1.2 2c.1.3.4.5.8.5.1 0 .2 0 .3-.1l1.2-.4c.2.1.4.3.7.4l.3 1.3c.1.5.5.8 1 .8h2.4c.5 0 .9-.3 1-.8l.3-1.3c.2-.1.4-.2.7-.4l1.2.4c.1 0 .2.1.3.1.4 0 .7-.2.9-.5l1.1-2c.2-.4.2-.9-.2-1.3zm-.9 3.6-1.7-.6c-.4.3-.9.6-1.4.8L9.2 14H6.8l-.4-1.8c-.5-.2-.9-.5-1.4-.8l-1.6.6-1.2-2 1.4-1.2c-.1-.5-.1-1.1 0-1.6L2.2 6l1.2-2 1.7.6c.4-.4.9-.6 1.4-.8L6.8 2h2.4l.4 1.8c.5.2.9.5 1.4.8l1.6-.6 1.2 2-1.4 1.2c.1.5.1 1.1 0 1.6l1.4 1.2z"
                  />
                  <path
                    d="M8 11c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3c0 1.6-1.3 3-3 3m0-5c-1.1 0-2 .8-2 1.9V8c0 1.1.8 2 1.9 2H8c1.1 0 2-.8 2-1.9V8c0-1.1-.8-2-2-2 .1 0 0 0 0 0"
                  />
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-«r2t»"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Settings
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </span>
        <button
          class="cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
          type="button"
        >
          Add new
        </button>
      </div>
    </section>
    <div
      class="cds--data-table-content"
    >
      <table
        aria-labelledby="tc-«r2k»-title"
        class="cds--data-table cds--data-table--lg"
      >
        <thead>
          <tr>
            <th
              aria-live="off"
              class="cds--table-column-checkbox"
              scope="col"
            >
              <div
                class="cds--checkbox--inline"
              >
                <input
                  class="cds--checkbox"
                  id="data-table-7__select-all"
                  name="select-all-7"
                  type="checkbox"
                />
                <label
                  class="cds--checkbox-label"
                  for="data-table-7__select-all"
                >
                  <span
                    class="cds--visually-hidden"
                  >
                    Select all rows
                  </span>
                </label>
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field A
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field B
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox"
            >
              <div
                class="cds--checkbox--inline"
              >
                <input
                  class="cds--checkbox"
                  id="data-table-7__select-row-b"
                  name="select-row-7"
                  type="checkbox"
                />
                <label
                  class="cds--checkbox-label"
                  for="data-table-7__select-row-b"
                >
                  <span
                    class="cds--visually-hidden"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 2:A
            </td>
            <td>
              Field 2:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox"
            >
              <div
                class="cds--checkbox--inline"
              >
                <input
                  class="cds--checkbox"
                  id="data-table-7__select-row-a"
                  name="select-row-7"
                  type="checkbox"
                />
                <label
                  class="cds--checkbox-label"
                  for="data-table-7__select-row-a"
                >
                  <span
                    class="cds--visually-hidden"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 1:A
            </td>
            <td>
              Field 1:B
            </td>
          </tr>
          <tr>
            <td
              aria-live="off"
              class="cds--table-column-checkbox"
            >
              <div
                class="cds--checkbox--inline"
              >
                <input
                  class="cds--checkbox"
                  id="data-table-7__select-row-c"
                  name="select-row-7"
                  type="checkbox"
                />
                <label
                  class="cds--checkbox-label"
                  for="data-table-7__select-row-c"
                >
                  <span
                    class="cds--visually-hidden"
                  >
                    Select row
                  </span>
                </label>
              </div>
            </td>
            <td>
              Field 3:A
            </td>
            <td>
              Field 3:B
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;

exports[`DataTable renders as expected - Component API should render and match snapshot 1`] = `
<div>
  <section
    class="cds--data-table-container"
    data-testid="test-id"
  >
    <div
      class="cds--data-table-header"
    >
      <h2
        class="cds--data-table-header__title"
        id="tc-«re»-title"
      >
        DataTable with toolbar
      </h2>
    </div>
    <section
      aria-label="data table toolbar"
      class="cds--table-toolbar"
    >
      <div
        aria-hidden="true"
        class="cds--batch-actions"
      >
        <div
          class="cds--batch-summary"
        >
          <p
            class="cds--batch-summary__para"
          >
            <span
              dir="auto"
            >
              0 items selected
            </span>
          </p>
        </div>
        <div
          class="cds--action-list"
        >
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2A14.173 14.173 0 0 0 2 16a14.173 14.173 0 0 0 14 14 14.173 14.173 0 0 0 14-14A14.173 14.173 0 0 0 16 2m8 15h-7v7h-2v-7H8v-2h7V8h2v7h7Z"
              />
              <path
                d="M24 17h-7v7h-2v-7H8v-2h7V8h2v7h7z"
                fill-opacity="0"
                id="inner-path"
              />
              <path
                d="M0 0h32v32H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2A14.173 14.173 0 0 0 2 16a14.173 14.173 0 0 0 14 14 14.173 14.173 0 0 0 14-14A14.173 14.173 0 0 0 16 2m8 15h-7v7h-2v-7H8v-2h7V8h2v7h7Z"
              />
              <path
                d="M24 17h-7v7h-2v-7H8v-2h7V8h2v7h7z"
                fill-opacity="0"
                id="inner-path"
              />
              <path
                d="M0 0h32v32H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Ghost
            <svg
              aria-hidden="true"
              aria-label="Add"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2A14.173 14.173 0 0 0 2 16a14.173 14.173 0 0 0 14 14 14.173 14.173 0 0 0 14-14A14.173 14.173 0 0 0 16 2m8 15h-7v7h-2v-7H8v-2h7V8h2v7h7Z"
              />
              <path
                d="M24 17h-7v7h-2v-7H8v-2h7V8h2v7h7z"
                fill-opacity="0"
                id="inner-path"
              />
              <path
                d="M0 0h32v32H0z"
                fill="none"
              />
            </svg>
          </button>
          <button
            class="cds--batch-summary__cancel cds--btn cds--btn--primary"
            tabindex="-1"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
      <div
        class="cds--toolbar-content"
      >
        <div
          aria-label="Filter table"
          class="cds--search cds--search--lg cds--toolbar-search-container-persistent"
          role="search"
        >
          <div
            class="cds--search-magnifier"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="cds--search-magnifier-icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 14.3 10.7 10c1.9-2.3 1.6-5.8-.7-7.7S4.2.7 2.3 3 .7 8.8 3 10.7c2 1.7 5 1.7 7 0l4.3 4.3zM2 6.5C2 4 4 2 6.5 2S11 4 11 6.5 9 11 6.5 11 2 9 2 6.5"
              />
              <path
                d="M0 0h16v16H0z"
                fill="none"
              />
            </svg>
          </div>
          <label
            class="cds--label"
            for="custom-id"
            id="custom-id-search"
          >
            Filter table
          </label>
          <input
            autocomplete="off"
            class="cds--search-input"
            id="custom-id"
            placeholder="Filter table"
            role="searchbox"
            tabindex="0"
            type="text"
            value=""
          />
          <button
            aria-label="Clear search input"
            class="cds--search-close cds--search-close--hidden"
            title="Clear search input"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.414 16 24 9.414 22.586 8 16 14.586 9.414 8 8 9.414 14.586 16 8 22.586 9.414 24 16 17.414 22.586 24 24 22.586z"
              />
              <path
                d="M0 0h32v32H0z"
                fill="none"
              />
            </svg>
          </button>
        </div>
        <span
          class="cds--overflow-menu__wrapper"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-labelledby="tooltip-«rm»"
                class="cds--toolbar-action cds--overflow-menu cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                title="Settings"
                type="button"
              >
                <svg
                  aria-label="Settings"
                  class="cds--overflow-menu__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5 8.4v-.8l1-.8c.4-.3.4-.9.2-1.3l-1.2-2c-.2-.3-.5-.5-.9-.5-.1 0-.2 0-.3.1l-1.2.4c-.2-.1-.4-.3-.7-.4l-.3-1.3c0-.5-.4-.8-.9-.8H6.8c-.5 0-.9.3-1 .8l-.2 1.3c-.3.1-.5.2-.7.3L3.7 3h-.3c-.4 0-.7.2-.9.5l-1.2 2c-.2.4-.1.9.3 1.3l.9.9v.8l-.9.7c-.4.3-.5.9-.2 1.3l1.2 2c.1.3.4.5.8.5.1 0 .2 0 .3-.1l1.2-.4c.2.1.4.3.7.4l.3 1.3c.1.5.5.8 1 .8h2.4c.5 0 .9-.3 1-.8l.3-1.3c.2-.1.4-.2.7-.4l1.2.4c.1 0 .2.1.3.1.4 0 .7-.2.9-.5l1.1-2c.2-.4.2-.9-.2-1.3zm-.9 3.6-1.7-.6c-.4.3-.9.6-1.4.8L9.2 14H6.8l-.4-1.8c-.5-.2-.9-.5-1.4-.8l-1.6.6-1.2-2 1.4-1.2c-.1-.5-.1-1.1 0-1.6L2.2 6l1.2-2 1.7.6c.4-.4.9-.6 1.4-.8L6.8 2h2.4l.4 1.8c.5.2.9.5 1.4.8l1.6-.6 1.2 2-1.4 1.2c.1.5.1 1.1 0 1.6l1.4 1.2z"
                  />
                  <path
                    d="M8 11c-1.7 0-3-1.3-3-3s1.3-3 3-3 3 1.3 3 3c0 1.6-1.3 3-3 3m0-5c-1.1 0-2 .8-2 1.9V8c0 1.1.8 2 1.9 2H8c1.1 0 2-.8 2-1.9V8c0-1.1-.8-2-2-2 .1 0 0 0 0 0"
                  />
                  <path
                    d="M0 0h16v16H0z"
                    fill="none"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-«rm»"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Settings
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </span>
        <button
          class="cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary"
          type="button"
        >
          Add new
        </button>
      </div>
    </section>
    <div
      class="cds--data-table-content"
    >
      <table
        aria-labelledby="tc-«re»-title"
        class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
      >
        <thead>
          <tr>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field A
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
            <th
              scope="col"
            >
              <div
                class="cds--table-header-label"
              >
                Field B
                <div
                  class="cds--table-header-label--decorator-inner"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          aria-live="polite"
        >
          <tr>
            <td>
              Field 2:A
            </td>
            <td>
              Field 2:B
            </td>
          </tr>
          <tr>
            <td>
              Field 1:A
            </td>
            <td>
              Field 1:B
            </td>
          </tr>
          <tr>
            <td>
              Field 3:A
            </td>
            <td>
              Field 3:B
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</div>
`;
